<resources>
    <string name="app_name">Dome</string>
    <string name="car_bind_tag_id"><font color='red'>*</font>绑定标签号：</string>
    <string name="car_host_name"><font color='red'>*</font>车主姓名：</string>
    <string name="host_name"><font color='red'>*</font>姓名：</string>
    <string name="car_host_identify"><font color='red'>*</font>身份证号码：</string>
    <string name="guardian_identify">监护人身份证号：</string>
    <string name="car_host_phone"><font color='red'>*</font>车主手机号码：</string>
    <string name="car_host_address"><font color='red'>*</font>性别：</string>
    <string name="car_host_residence"><font color='red'>*</font>现居地址：</string>
    <string name="car_host_policestation"><font color='red'>*</font>组织机构：</string>
    <string name="car_host_uworkaddress">工作单位：</string>
    <string name="car_host_birthday"><font color='red'>*</font>出生日期：</string>
    <string name="uurgencyname"><font color='red'>*</font>紧急联系人：</string>
    <string name="uurgencyphone"><font color='red'>*</font>紧急联系人电话：</string>
    <string name="car_plate_num"><font color='red'>*</font>车牌号：</string>
    <string name="car_buytime"><font color='red'>*</font>购买时间：</string>
    <string name="ptype_tip"><font color='red'>*</font>人员类型：</string>
    <string name="company_name">深圳市华士精成科技有限公司</string>
    <string name="fileManage">文件管理</string>
    <string name="backLastDir">返回上一层</string>
    <string name="action_settings">Settings</string>
    <string name="chooserIdCardType">证件类型</string>
    <string name="ActivationProgram">激活程序</string>
    <string name="takePicture">扫描</string>
    <string name="license_verification_failed">OCR识别授权验证失败</string>
    <string name="online_activation">在线激活</string>
    <string name="activation_success">激活成功</string>
    <string name="dialog_title">首次使用若能联网请在此填写序列号，不区分大小写，并点击“授权验证”按钮.</string>
    <string name="back">返回</string>
    <string name="exit">退出</string>
    <string name="importRecog">导入识别</string>
    <string name="back_confirm">再按一次退出</string>
    <string name="chooseRecogType">选择识别类型</string>
    <string name="confirm">sure</string>
    <string name="cancel">cancel</string>
    <string name="unsupport_auto_focus">，没有对焦功能</string>
    <string name="toast_autofocus_failure">对焦失败</string>
    <string name="unsupportflash">不支持闪光灯</string>
    <string name="exception">未识别代码：</string>
    <string name="exception1">激活失败代码：</string>
    <string name="exception2">识别初始化失败代码：</string>
    <string name="exception3">识别载入图像失败，请重新识别代码：</string>
    <string name="exception4">识别载入图像失败，识别初始化失败,请重试代码：</string>
    <string name="exception5">识别载入图像失败代码：</string>
    <string name="exception6">识别失败代码：</string>
    <string name="exception7">免费次数已用完，请购买!</string>
    <string name="exception8">次数异常:</string>
    <string name="exception9">识别证件类型或拍照方式不正确</string>
    <string name="recognized_failed">识别失败</string>
    <string name="please_connect_network">请连接网络</string>
    <string name="network_unused">网络不可用</string>
    <string name="passport">护照</string>
    <string name="ID_card">二代身份证</string>
    <string name="EPT_HK_Macau">港澳通行证</string>
    <string name="IDCard_Macau">澳门身份证</string>
    <string name="New_IDCard_Macau">新版澳门身份证</string>
    <string name="MRTTTP">大陆居民往来台湾通行证</string>
    <string name="visa">签证</string>
    <string name="NEEPT_HK_Macau">新版港澳通行证</string>
    <string name="HRPO">回乡证(正面)</string>
    <string name="HRPR">回乡证(背面)</string>
    <string name="MyKad">马来西亚身份证</string>
    <string name="TRTTTMTP">台胞证</string>
    <string name="NTRTTTMTP">新版台胞证(正面)</string>
    <string name="NTRTTTMTP_01">新版台胞证(背面)</string>
    <string name="Taiwan_IDcard_front">台湾身份证(正面)</string>
    <string name="Taiwan_IDcard_reverse">台湾身份证(背面)</string>
    <string name="National_health_insurance_card">全民健康保险卡</string>
    <string name="Driver_license">新西兰驾照</string>
    <string name="California_driver_license">加利福尼亚驾照</string>
    <string name="HK_IDcard">香港身份证</string>
    <string name="US">美国</string>
    <string name="Singapore_IDcard">新加坡身份证</string>
    <string name="mrz">机读码</string>
    <string name="china_driver">中国驾照</string>
    <string name="china_driving_license">中国行驶证</string>
    <string name="save_full_picture">保存整图</string>
    <string name="id_card_text1">请将人像面放在框内,并调整好光线</string>
    <string name="id_card_text2">请调整好光线,避免反光</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="camera_tv_prompt_space">点击屏幕对焦</string>
    <string name="camera_setting_language">识别语言</string>
    <string name="camera_setting_viewfinder">取景模式</string>
    <string name="camera_setting_focus">对焦模式</string>
    <string name="camera_setting_length">识别语言  英语/中英欧</string>
    <string name="camera_setting_title">系统设置</string>
    <string name="camera_setting_focus_manaul">手动/自动</string>
    <string name="main_home">查询</string>
    <string name="main_setting">管理</string>
    <string name="main_me">我的</string>
    <string name="price_format">#####0.00</string>
    <string name="price_symbol">¥</string>
    <string name="price_separator">.</string>
    <string name="server_error">加载失败，请稍后再试</string>
    <string name="net_error">您的网络好像不太给力，请稍后再试</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="user_had_existed">该用户已经存在</string>
    <string name="user_login_exception">用户登录异常</string>
    <string name="database_error">数据库数据发生异常，请稍候重试</string>
    <string name="uploading_please_wait">图片上传中，请稍候\n%1$s</string>
    <string name="re_load">重新加载</string>
    <string name="loading_data">正在加载数据&#8230;</string>
    <string name="splash_text">遇见精英  品味生活</string>
    <string name="warning">提示</string>
    <string name="out">Click on the exit software again</string>
    <string name="manager">Management</string>
    <string name="managerbtn">switch language</string>
    <string name="luanguage_title">select language</string>
    <string name="sure">yes</string>
    <string name="luanguage_type_c">简体中文</string>
    <string name="luanguage_type_e">English</string>
    <string name="technical">technical</string>
    <string name="device_connection">device connection</string>
    <string name="debug">debug</string>
    <string name="toast_no_permission">Permission prohibited, need to restart</string>
    <string name="connect">connect</string>
    <string name="no_connect">no connect</string>
    <string name="connect_device">connect device</string>
    <string name="disconnect">disconnect</string>
    <string name="bluetooth_not_open">bluetooth not open</string>
    <string name="bluetooth_not_enabel">bluetooth not enable</string>
    <string name="device_not_blueth">Sorry, this mobile do not support BLE</string>
    <string name="device_unknow">Unknow bluetooth type, cannot connect</string>
    <string name="connect_success">connect success</string>
    <string name="connecting">connecting</string>
    <string name="connect_error">connect error</string>
    <string name="blueth_disconnect">bluetooth disconnect</string>
    <string name="has_connect">has connect</string>
    <string name="device_name">device name：</string>
    <string name="device_mac">device mac：</string>
    <string name="match_device">Matched Devices</string>
    <string name="not_match_device">Not Matched Devices</string>
    <string name="not_get_match_device">No matched device found</string>
    <string name="not_get_other_device">No other device found</string>
    <string name="getting_device">Getting device ...</string>
    <string name="select_device">Please select device</string>
    <string name="tianxian_debug">Antenna debugging</string>
    <string name="collector_info">collector info</string>
    <string name="device_id">device id：</string>
    <string name="device_id_hint">The length is 15 bytes</string>
    <string name="factory_num">factory num：</string>
    <string name="factory_num_hint">Need to get separately</string>
    <string name="read">read</string>
    <string name="remove">remove</string>
    <string name="wireless_network_params">wireless network params</string>
    <string name="plat_ip_1">plat ip 1：</string>
    <string name="plat_port_1">plat port 1：</string>
    <string name="wireless_imei">wireless module imei：</string>
    <string name="read_triad">triad:</string>
    <string name="reading_triple">The triplet needs to be read separately</string>
    <string name="wireless_imei_hint">Need to get separately(need to insert the SIM card)</string>
    <string name="wireless_rssi">RSSI strength：</string>
    <string name="tx_info">Antenna parameters</string>
    <string name="tx_one_zy">Antenna 1 (East) Gain:</string>
    <string name="tx_two_zy">Antenna 2 (South) Gain:</string>
    <string name="tx_three_zy">Antenna 3 (West) Gain:</string>
    <string name="tx_four_zy">Antenna 4 (North) Gain:</string>
    <string name="quchong_guolv">Filter (second):</string>
    <string name="open_buzzer">open buzzer</string>
    <string name="open_dhcp">open DHCP</string>
    <string name="open_direction_filter">open direction filter</string>
    <string name="stop_time">residence time （s)：</string>
    <string name="direction_filter">direction filter time （s)：</string>
    <string name="wire_network_params">wire network params</string>
    <string name="local_ip">local ip：</string>
    <string name="local_port">local port：</string>
    <string name="sub_net_mask">subnet mask：</string>
    <string name="gateway">gateway：</string>
    <string name="plat_ip_2">plat ip 2：</string>
    <string name="plat_port_2">plat port 2：</string>
    <string name="controller_status">collector status</string>
    <string name="sys_time">system time：</string>
    <string name="sys_time_hint"> get/set separately</string>
    <string name="setting">setting</string>
    <string name="network_status">network status:</string>
    <string name="wirless_connect_ip">wireless connect ip:</string>
    <string name="wire_connect_ip">wire connect ip:</string>
    <string name="label_cache_total">total ID in buffer:</string>
    <string name="wireless">wireless:</string>
    <string name="wire">wire:</string>
    <string name="filter">filter:</string>
    <string name="upload_info">upload info</string>
    <string name="read_device_info">read device info</string>
    <string name="set_params">set params</string>
    <string name="no_connect_read">Device not connected, fai to read</string>
    <string name="reading">reading ...</string>
    <string name="enter_device_id">Please enter device id</string>
    <string name="device_id_length_less">less length of device ID</string>
    <string name="tianxian_info">Antenna info</string>
    <string name="device_cache_label_total">total tag ID in buffer:</string>
    <string name="label_num">target tag ID:</string>
    <string name="read_count">times of reading:</string>
    <string name="tx_one_read_label">Antenna 1 reading:</string>
    <string name="tx_two_read_label">Antenna 2 reading:</string>
    <string name="tx_three_read_label">Antenna 3 reading:</string>
    <string name="tx_four_read_label">Antenna 4 reading:</string>
    <string name="start_read">start read</string>
    <string name="stop_read">stop read</string>
    <string name="tx_rssi_one">Antenna 1 (East) rssi:</string>
    <string name="tx_rssi_two">Antenna 2 (South) rssi:</string>
    <string name="tx_rssi_three">Antenna 3 (West) rssi:</string>
    <string name="tx_rssi_four">Antenna 4 (North) rssi:</string>
    <string name="tag_search">assets find</string>
    <string name="tag_id">Tag Id</string>
    <string name="asset_description">Asset description</string>
    <string name="y_n">Y/N</string>
    <string name="state_connected">State: already connected</string>
    <string name="export_excel">Export Excel</string>
    <string name="suspend">suspend</string>
    <string name="turn_sound_off">turn sound off</string>
</resources>